chore: several changes, from key-frame animations, custom properties to intersection observer
* chore: added some more styles

* chore: added a width attribute/property

* chore: added primary and secondary colors

* chore: added intersection observer

---------

Co-authored-by: David Kurek <david.kurek@sapiens.com>

--- a/public/styles.css
+++ b/public/styles.css
@@ -1,7 +1,11 @@
+html {
+  height: 400vh;
+}
+
 body {
   display: grid;
-  place-items: center;
   font-family: Arial, sans-serif;
-  background-color: #f2f3f7;
-  margin: 0;
+  place-items: center;
+  background-color: #cabf98;
+  height: 400vh;
 }
