--- a/public/styles.css
+++ b/public/styles.css
@@ -6,6 +6,6 @@ body {
   display: grid;
   font-family: Arial, sans-serif;
   place-items: center;
-  background-color: #cabf98;
+  background-color: #f2f3f7;
   height: 400vh;
 }
