--- a/src/css/style.css
+++ b/src/css/style.css
@@ -1,88 +1,90 @@
 :host {
-  --host-width: 300px;
-  --border-radius: calc(var(--host-width) / 100 * 48);
-  --primary-color: #ff6160;
-  --secondary-color: #ffff80;
-  --background-color: #cabf98;
-  display: inline-block;
+	--host-width: 300px;
+	--border-radius: calc(var(--host-width) / 100 * 48);
+	--primary-color: #ff6160;
+	--secondary-color: #ffff80;
+	--background-color: #cabf98;
+	display: grid;
+  place-items: center;
+  width: min(100%, var(--host-width) + calc(var(--host-width) / 100 * 30));
 }
 
 #container {
-  display: grid;
-  grid-template-columns: [container-start] 1fr [container-end];
-  grid-template-rows: [sun-start] 1fr [horizon-start] 10px [reflection-start] 1fr [reflection-end];
-  place-items: center;
-  width: var(--host-width);
-  aspect-ratio: 1;
+	display: grid;
+	grid-template-columns: [container-start] 1fr [container-end];
+	grid-template-rows: [sun-start] 1fr [horizon-start] 10px [reflection-start] 1fr [reflection-end];
+	place-items: center;
+  width: min(100%, var(--host-width));
+	aspect-ratio: 1;
 }
 
 #container > div {
-  min-width: 100%;
-  min-height: 100%;
+	width: 100%;
+	height: 100%;
 }
 
 #background {
-  grid-column: container-start / container-end;
-  grid-row: horizon-start / reflection-end;
-  background-color: var(--background-color);
-  z-index: 2;
+	grid-column: container-start / container-end;
+	grid-row: horizon-start / reflection-end;
+	background-color: var(--background-color);
+	z-index: 2;
 }
 
 #sun {
-  grid-column: container-start / container-end;
-  grid-row: sun-start / horizon-start;
-  background: var(--primary-color);
-  background: radial-gradient(
-    circle at var(--sun-gradient-x) var(--sun-gradient-y),
-    var(--secondary-color) 0%,
-    var(--primary-color) 100%
-  );
-  border-radius: var(--border-radius) var(--border-radius) 0 0;
-  transform-origin: center bottom;
-  z-index: 1;
+	grid-column: container-start / container-end;
+	grid-row: sun-start / horizon-start;
+	background: var(--primary-color);
+	background: radial-gradient(
+		circle at var(--sun-gradient-x) var(--sun-gradient-y),
+		var(--secondary-color) 0%,
+		var(--primary-color) 100%
+	);
+	border-radius: var(--border-radius) var(--border-radius) 0 0;
+	transform-origin: center bottom;
+	z-index: 1;
 }
 
 #horizon {
-  opacity: 0;
-  width: 0;
-  min-width: initial;
-  grid-column: container-start / container-end;
-  grid-row: horizon-start / reflection-start;
-  z-index: 2;
+	opacity: 0;
+	width: 0;
+	min-width: initial;
+	grid-column: container-start / container-end;
+	grid-row: horizon-start / reflection-start;
+	z-index: 2;
 }
 
 #horizon::before {
-  content: "";
-  display: block;
-  border-top: 0.01rem solid #f5f5f5;
-  opacity: 0.25;
+	content: '';
+	display: block;
+	border-top: 0.01rem solid #f5f5f5;
+	opacity: 0.25;
 }
 
 #horizon::after {
-  content: "";
-  display: block;
-  height: 0.01rem;
-  box-shadow: 0 8px 10px 0px var(primary-color);
+	content: '';
+	display: block;
+	height: 0.01rem;
+	box-shadow: 0 8px 10px 0px var(primary-color);
 }
 
 #reflection {
-  opacity: 0;
-  grid-column: container-start / container-end;
-  grid-row: reflection-start / reflection-end;
-  background: var(primary-color);
-  background: radial-gradient(
-    circle at bottom,
-    var(--secondary-color) 0%,
-    var(--primary-color) 60%
-  );
-  transform-origin: center top;
-  border-radius: 0 0 10rem 10rem;
-  filter: blur(2.5rem);
-  zoom: 0.95;
-  z-index: 2;
+	opacity: 0;
+	grid-column: container-start / container-end;
+	grid-row: reflection-start / reflection-end;
+	background: var(primary-color);
+	background: radial-gradient(
+		circle at bottom,
+		var(--secondary-color) 0%,
+		var(--primary-color) 60%
+	);
+	transform-origin: center top;
+	border-radius: 0 0 10rem 10rem;
+	filter: blur(2.5rem);
+	zoom: 0.95;
+	z-index: 2;
 }
 
 #reflection::before {
-  content: "";
-  background: #ffffff;
+	content: '';
+	background: #ffffff;
 }
